Fix: reduce spacing between window buttons as much as I can

--- a/gtk/src/default/gtk-3.20/_common.scss
+++ b/gtk/src/default/gtk-3.20/_common.scss
@@ -4623,7 +4623,7 @@ button.titlebutton {
   &:not(.appmenu) {
     border-radius: 9999px;
     padding: $_hb_btn_pad;
-    margin: 0 2px;
+    margin: 0;
     min-width: 0;
     min-height: 0;
   }
